// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Card default 1`] = `
.c0 {
  background-color: white;
  box-shadow: 0 0.2rem 0.4rem 0 rgba(139,159,196,0.2);
  height: 100%;
  -webkit-transition: box-shadow 0.2s ease-in-out;
  transition: box-shadow 0.2s ease-in-out;
  width: 100%;
}

<div
  className="c0"
>
  <p>
    Hello, it's Frichti!
  </p>
</div>
`;

exports[`Storyshots Atoms/Card with playable tag 1`] = `
.c0 {
  background-color: white;
  box-shadow: 0 0.2rem 0.4rem 0 rgba(139,159,196,0.2);
  height: 100%;
  -webkit-transition: box-shadow 0.2s ease-in-out;
  transition: box-shadow 0.2s ease-in-out;
  width: 100%;
}

.c0:hover {
  box-shadow: 0 1.2rem 2.4rem 0 rgba(139,159,196,0.2);
}

<button
  className="c0"
>
  <p>
    Hello, it's Frichti!
  </p>
</button>
`;

exports[`Storyshots Atoms/Icon default 1`] = `
.c0 {
  height: auto;
  fill: #26303c;
}

<svg
  className="c0"
  width={50}
>
  cart.svg
</svg>
`;

exports[`Storyshots Atoms/Picture default 1`] = `
.c0 {
  background-color: #f0f3f7;
  height: auto;
  opacity: 0;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
}

<img
  alt="default"
  className="c0"
  onLoad={[Function]}
  src="https://via.placeholder.com/500x500/FDF18D/26303C?text=frichti.co"
/>
`;

exports[`Storyshots Molecules/Header default 1`] = `
.c2 {
  height: auto;
  fill: #26303c;
}

.c0 {
  box-shadow: 0 0.1rem 0.1rem 0 rgba(38,48,60,0.1), 0 0.1rem 0 0 rgba(29,64,105,0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 5rem;
  width: 100%;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fdf18d;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 1.6rem;
}

.c3 {
  background-color: #f4f5f8;
  display: none;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  list-style-type: none;
  padding: 0 1.6rem;
}

.c4 {
  display: block;
  float: left;
  line-height: 5rem;
  margin-right: 1.6rem;
  text-align: left;
}

.c5 {
  font: bold 1.5rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
  color: #26303c;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:hover {
  font-weight: bolder;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  font: bold 1.2rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
  background: white;
  border: 0;
  cursor: pointer;
  display: none;
  margin: 0;
  padding-left: 1.6rem;
  padding-right: 1.6rem;
}

@media (min-width:768px) {
  .c1 {
    -webkit-flex: 0;
    -ms-flex: 0;
    flex: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    display: block;
  }
}

@media (min-width:768px) {
  .c6 {
    display: block;
  }
}

<header
  className="c0"
>
  <figure
    className="c1"
  >
    <svg
      className="c2"
      width={100}
    >
      frichti.svg
    </svg>
  </figure>
  <ul
    className="c3"
  >
    <li
      className="c4"
    >
      <a
        className="c5"
        href="#menu-entrees"
      >
        Entrées
      </a>
    </li>
    <li
      className="c4"
    >
      <a
        className="c5"
        href="#menu-plats"
      >
        Plats
      </a>
    </li>
    <li
      className="c4"
    >
      <a
        className="c5"
        href="#menu-desserts"
      >
        Desserts
      </a>
    </li>
  </ul>
  <button
    className="c6"
    onClick={[Function]}
    title="Hello you!"
    type="button"
  >
    Jane Doe
  </button>
</header>
`;

exports[`Storyshots Molecules/ProductCard default 1`] = `
.c0 {
  background-color: white;
  box-shadow: 0 0.2rem 0.4rem 0 rgba(139,159,196,0.2);
  height: 100%;
  -webkit-transition: box-shadow 0.2s ease-in-out;
  transition: box-shadow 0.2s ease-in-out;
  width: 100%;
}

.c2 {
  background-color: #f0f3f7;
  height: auto;
  opacity: 0;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
}

.c1 {
  padding-top: 64.29%;
  position: relative;
  width: 100%;
}

.c3 {
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 12rem;
  padding: 1.3rem;
}

.c5 {
  font: 900 1.4rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
  color: #26303c;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 0.4rem;
}

.c6 {
  font: 700 1.3rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
  color: #26303c;
}

@media (min-width:768px) {
  .c4 {
    height: 14rem;
    padding: 1.6rem;
  }
}

@media (min-width:640px) {
  .c5 {
    font: 900 1.6rem/normal 'Open Sans','Helvetica',sans-serif;
    -webkit-letter-spacing: normal;
    -moz-letter-spacing: normal;
    -ms-letter-spacing: normal;
    letter-spacing: normal;
    text-transform: none;
  }
}

@media (min-width:768px) {
  .c5 {
    font: 900 1.8rem/normal 'Open Sans','Helvetica',sans-serif;
    -webkit-letter-spacing: normal;
    -moz-letter-spacing: normal;
    -ms-letter-spacing: normal;
    letter-spacing: normal;
    text-transform: none;
  }
}

@media (min-width:768px) {
  .c6 {
    font: 700 1.5rem/normal 'Open Sans','Helvetica',sans-serif;
    -webkit-letter-spacing: normal;
    -moz-letter-spacing: normal;
    -ms-letter-spacing: normal;
    letter-spacing: normal;
    text-transform: none;
  }
}

<div
  className="c0"
>
  <figure>
    <div
      className="c1"
    >
      <img
        alt="Title"
        className="c2 c3"
        onLoad={[Function]}
        src="https://via.placeholder.com/280x180/FDF18D/26303C?text=frichti.co"
      />
    </div>
    <figcaption
      className="c4"
    >
      <h3
        className="c5"
      >
        Title
      </h3>
      <p
        className="c6"
      >
        10,00€
      </p>
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots Molecules/ProductCard with unit 1`] = `
.c0 {
  background-color: white;
  box-shadow: 0 0.2rem 0.4rem 0 rgba(139,159,196,0.2);
  height: 100%;
  -webkit-transition: box-shadow 0.2s ease-in-out;
  transition: box-shadow 0.2s ease-in-out;
  width: 100%;
}

.c2 {
  background-color: #f0f3f7;
  height: auto;
  opacity: 0;
  -webkit-transition: opacity 0.3s ease-in-out;
  transition: opacity 0.3s ease-in-out;
  width: 100%;
}

.c1 {
  padding-top: 64.29%;
  position: relative;
  width: 100%;
}

.c3 {
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 12rem;
  padding: 1.3rem;
}

.c5 {
  font: 900 1.4rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
  color: #26303c;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 0.4rem;
}

.c6 {
  font: 500 1.2rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: uppercase;
  color: #96a0b4;
  margin-bottom: 0.4rem;
}

.c7 {
  font: 700 1.3rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
  color: #26303c;
}

@media (min-width:768px) {
  .c4 {
    height: 14rem;
    padding: 1.6rem;
  }
}

@media (min-width:640px) {
  .c5 {
    font: 900 1.6rem/normal 'Open Sans','Helvetica',sans-serif;
    -webkit-letter-spacing: normal;
    -moz-letter-spacing: normal;
    -ms-letter-spacing: normal;
    letter-spacing: normal;
    text-transform: none;
  }
}

@media (min-width:768px) {
  .c5 {
    font: 900 1.8rem/normal 'Open Sans','Helvetica',sans-serif;
    -webkit-letter-spacing: normal;
    -moz-letter-spacing: normal;
    -ms-letter-spacing: normal;
    letter-spacing: normal;
    text-transform: none;
  }
}

@media (min-width:768px) {
  .c7 {
    font: 700 1.5rem/normal 'Open Sans','Helvetica',sans-serif;
    -webkit-letter-spacing: normal;
    -moz-letter-spacing: normal;
    -ms-letter-spacing: normal;
    letter-spacing: normal;
    text-transform: none;
  }
}

<div
  className="c0"
>
  <figure>
    <div
      className="c1"
    >
      <img
        alt="Title"
        className="c2 c3"
        onLoad={[Function]}
        src="https://via.placeholder.com/280x180/FDF18D/26303C?text=frichti.co"
      />
    </div>
    <figcaption
      className="c4"
    >
      <h3
        className="c5"
      >
        Title
      </h3>
      <p
        className="c6"
      >
        UNIT
      </p>
      <p
        className="c7"
      >
        10,00€
      </p>
    </figcaption>
  </figure>
</div>
`;

exports[`Storyshots Molecules/SearchBar default 1`] = `
.c2 {
  height: auto;
  fill: #26303c;
}

.c0 {
  top: 5rem;
  left: 0;
  right: 0;
  position: fixed;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-top: 0.1rem solid rgb(229,233,239);
  box-shadow: rgba(38,48,60,0.1) 0 1px 1px 0, rgba(29,64,105,0.1) 0 1px 0 0;
  background: #ffffff;
  padding: 1rem 2rem;
}

.c1 {
  background-color: #f0f3f7;
  border-radius: 1.8rem;
  padding: 0.6rem 1.2rem;
  width: 70%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  pointer-events: none;
  fill: #96a0b4;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background: #f0f3f7;
  border: #f0f3f7;
  color: #26303c;
  font: 600 1.3rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
}

.c4::-webkit-input-placeholder {
  font: 600 1.3rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
  color: #96a0b4;
}

.c4::-moz-placeholder {
  font: 600 1.3rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
  color: #96a0b4;
}

.c4:-ms-input-placeholder {
  font: 600 1.3rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
  color: #96a0b4;
}

.c4::placeholder {
  font: 600 1.3rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
  color: #96a0b4;
}

.c4:focus {
  outline: none;
}

@media (min-width:768px) {
  .c0 {
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
  }
}

@media (min-width:768px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: start;
    -ms-flex-pack: start;
    justify-content: start;
    width: 24rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      className="c2 c3"
      width={24}
    >
      search.svg
    </svg>
    <input
      className="c4"
      onChange={[Function]}
      placeholder="Rechercher un produit.."
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots Molecules/SearchBar with value 1`] = `
.c2 {
  height: auto;
  fill: #26303c;
}

.c0 {
  top: 5rem;
  left: 0;
  right: 0;
  position: fixed;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-top: 0.1rem solid rgb(229,233,239);
  box-shadow: rgba(38,48,60,0.1) 0 1px 1px 0, rgba(29,64,105,0.1) 0 1px 0 0;
  background: #ffffff;
  padding: 1rem 2rem;
}

.c1 {
  background-color: #f0f3f7;
  border-radius: 1.8rem;
  padding: 0.6rem 1.2rem;
  width: 70%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  pointer-events: none;
  fill: #96a0b4;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  background: #f0f3f7;
  border: #f0f3f7;
  color: #26303c;
  font: 600 1.3rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
}

.c4::-webkit-input-placeholder {
  font: 600 1.3rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
  color: #96a0b4;
}

.c4::-moz-placeholder {
  font: 600 1.3rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
  color: #96a0b4;
}

.c4:-ms-input-placeholder {
  font: 600 1.3rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
  color: #96a0b4;
}

.c4::placeholder {
  font: 600 1.3rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
  color: #96a0b4;
}

.c4:focus {
  outline: none;
}

@media (min-width:768px) {
  .c0 {
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
  }
}

@media (min-width:768px) {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: start;
    -ms-flex-pack: start;
    justify-content: start;
    width: 24rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <svg
      className="c2 c3"
      width={24}
    >
      search.svg
    </svg>
    <input
      className="c4"
      onChange={[Function]}
      placeholder="Rechercher un produit.."
      value="carotte rapée"
    />
  </div>
</div>
`;

exports[`Storyshots Organisms/Filters default 1`] = `
.c1 {
  height: auto;
  fill: #26303c;
}

.c2 {
  pointer-events: none;
  fill: #fa826f;
}

.c0 {
  font: 700 1.4rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  margin-bottom: 1rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: 600 1.3rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
  margin-bottom: 2rem;
}

.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-bottom: 2rem;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0.1rem solid;
  border-radius: 0.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 0.8rem 0.8rem 0;
  padding: 0.8rem 1.8rem;
  font: 600 1.3rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
  cursor: pointer;
  -webkit-transition: color 0s ease 0s, background-color 0.2s cubic-bezier(0.6,0,0.2,1) 0s, border-color 0.2s cubic-bezier(0.6,0,0.2,1) 0s;
  transition: color 0s ease 0s, background-color 0.2s cubic-bezier(0.6,0,0.2,1) 0s, border-color 0.2s cubic-bezier(0.6,0,0.2,1) 0s;
  background-color: #ffffff;
  border-color: #dae2ed;
  color: #26303c;
}

.c5:focus {
  outline: none;
}

.c5:hover {
  background-color: #dae2ed;
}

@media (min-width:768px) {
  .c0 {
    font: 700 2.2rem/normal 'Open Sans','Helvetica',sans-serif;
    -webkit-letter-spacing: normal;
    -moz-letter-spacing: normal;
    -ms-letter-spacing: normal;
    letter-spacing: normal;
    text-transform: none;
  }
}

@media (min-width:768px) {
  .c3 {
    font: 600 1.5rem/normal 'Open Sans','Helvetica',sans-serif;
    -webkit-letter-spacing: normal;
    -moz-letter-spacing: normal;
    -ms-letter-spacing: normal;
    letter-spacing: normal;
    text-transform: none;
  }
}

<div
  className=""
>
  <h3
    className="c0"
  >
    <svg
      className="c1 c2"
      width={18}
    >
      heart.svg
    </svg>
     
    Mes Préférences
  </h3>
  <h4
    className="c3"
  >
    Allergies
     
  </h4>
  <div
    className="c4"
  >
    <button
      className="c5"
      onClick={[Function]}
    >
      Gluten
    </button>
    <button
      className="c5"
      onClick={[Function]}
    >
      Sésame
    </button>
    <button
      className="c5"
      onClick={[Function]}
    >
      Lactose
    </button>
    <button
      className="c5"
      onClick={[Function]}
    >
      Poisson
    </button>
    <button
      className="c5"
      onClick={[Function]}
    >
      Moutarde
    </button>
    <button
      className="c5"
      onClick={[Function]}
    >
      Sulfites
    </button>
    <button
      className="c5"
      onClick={[Function]}
    >
      Arachides
    </button>
    <button
      className="c5"
      onClick={[Function]}
    >
      Soja
    </button>
    <button
      className="c5"
      onClick={[Function]}
    >
      Crustacés
    </button>
    <button
      className="c5"
      onClick={[Function]}
    >
      Oeuf
    </button>
    <button
      className="c5"
      onClick={[Function]}
    >
      Fruits à coque
    </button>
  </div>
</div>
`;

exports[`Storyshots Organisms/Filters fixed to all enabled 1`] = `
.c1 {
  height: auto;
  fill: #26303c;
}

.c2 {
  pointer-events: none;
  fill: #fa826f;
}

.c0 {
  font: 700 1.4rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  margin-bottom: 1rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font: 600 1.3rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
  margin-bottom: 2rem;
}

.c4 {
  fill: #96a0b4;
  margin-left: 0.5rem;
  cursor: pointer;
}

.c5 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-bottom: 2rem;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 0.1rem solid;
  border-radius: 0.4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 0.8rem 0.8rem 0;
  padding: 0.8rem 1.8rem;
  font: 600 1.3rem/normal 'Open Sans','Helvetica',sans-serif;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-transform: none;
  cursor: pointer;
  -webkit-transition: color 0s ease 0s, background-color 0.2s cubic-bezier(0.6,0,0.2,1) 0s, border-color 0.2s cubic-bezier(0.6,0,0.2,1) 0s;
  transition: color 0s ease 0s, background-color 0.2s cubic-bezier(0.6,0,0.2,1) 0s, border-color 0.2s cubic-bezier(0.6,0,0.2,1) 0s;
  background-color: #70cd9a;
  border-color: #70cd9a;
  color: #ffffff;
}

.c6:focus {
  outline: none;
}

.c6:hover {
  background-color: #3eb273;
  border-color: #3eb273;
}

@media (min-width:768px) {
  .c0 {
    font: 700 2.2rem/normal 'Open Sans','Helvetica',sans-serif;
    -webkit-letter-spacing: normal;
    -moz-letter-spacing: normal;
    -ms-letter-spacing: normal;
    letter-spacing: normal;
    text-transform: none;
  }
}

@media (min-width:768px) {
  .c3 {
    font: 600 1.5rem/normal 'Open Sans','Helvetica',sans-serif;
    -webkit-letter-spacing: normal;
    -moz-letter-spacing: normal;
    -ms-letter-spacing: normal;
    letter-spacing: normal;
    text-transform: none;
  }
}

<div
  className=""
>
  <h3
    className="c0"
  >
    <svg
      className="c1 c2"
      width={18}
    >
      heart.svg
    </svg>
     
    Mes Préférences
  </h3>
  <h4
    className="c3"
  >
    11 allergènes masqués
     
    <svg
      className="c1 c4"
      onClick={[Function]}
      width={16}
    >
      cross.svg
    </svg>
  </h4>
  <div
    className="c5"
  >
    <button
      className="c6"
      onClick={[Function]}
    >
      Gluten
    </button>
    <button
      className="c6"
      onClick={[Function]}
    >
      Sésame
    </button>
    <button
      className="c6"
      onClick={[Function]}
    >
      Lactose
    </button>
    <button
      className="c6"
      onClick={[Function]}
    >
      Poisson
    </button>
    <button
      className="c6"
      onClick={[Function]}
    >
      Moutarde
    </button>
    <button
      className="c6"
      onClick={[Function]}
    >
      Sulfites
    </button>
    <button
      className="c6"
      onClick={[Function]}
    >
      Arachides
    </button>
    <button
      className="c6"
      onClick={[Function]}
    >
      Soja
    </button>
    <button
      className="c6"
      onClick={[Function]}
    >
      Crustacés
    </button>
    <button
      className="c6"
      onClick={[Function]}
    >
      Oeuf
    </button>
    <button
      className="c6"
      onClick={[Function]}
    >
      Fruits à coque
    </button>
  </div>
</div>
`;
